crates/outlap-schema/tests/fixtures/bad/unknown_section.tir
$ SPDX-License-Identifier: CC-BY-SA-4.0
$ SYNTHETIC — exercises the unknown-section did-you-mean warning.
[LONGITUDNAL_COEFFICIENTS]
PCX1 = 1.65
